# nxc

./: .gitignore  README.md  nxc.py  nxcDescription.md  pyproject.toml
nxc/: nxc.py  nxc_build.py
nxc/mistletoe_renderer/: massivewiki.py
nxc/templates/: netlify.toml
nxc/templates/this-website-themes/dolce/: all-pages.html  page.html  recent-pages.html  search.html
nxc/templates/this-website-themes/static/: style.css
templates/this-website-themes/: index.html
