[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nxc"
version = "0.0.6"
description = "Initialize project directory with starter files."
authors = [
  "Bill Anderson <band@acm.org>",
  "Peter Kaminski <kaminski@istori.com"
]
readme = "README.md"
homepage = "https://github.com/Massive-Wiki/nxc"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
nxc = "nxc.nxc:main"
